# hetero-select

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
figures-combined/ablation-required/: data.md
figures-combined/communication-round/: communication-round.md  time-x-axis.md
figures-combined/non-iid/: data.md
heteroselect/: __init__.py  client.py  compression.py  config.py  data.py  models.py  scoring.py  server.py  simulator.py  trainer.py  utils.py
results/: mnist_psi0p4_mu0p1_seed42_adaptive.json
results/ablation/: cifar10_psi0p2_mu0p1_seed42_adaptive.json  cifar10_psi0p4_mu0p01_seed42_adaptive.json  cifar10_psi0p4_mu0p0_seed42_adaptive.json  cifar10_psi0p4_mu0p1_seed42_stress.json  cifar10_psi0p4_mu0p1_seed42_uniform.json  cifar10_psi0p4_mu0p5_seed42_adaptive.json  cifar10_psi0p6_mu0p1_seed42_adaptive.json  summary.json
results/experiment/: cifar100_psi40_mu0p1_seed42_adaptive.json  cifar100_psi40_mu0p1_seed43_adaptive.json  cifar100_psi40_mu0p1_seed44_adaptive.json  cifar10_psi0p4_mu0p1_seed42_adaptive.json  cifar10_psi0p4_mu0p1_seed43_adaptive.json  cifar10_psi0p4_mu0p1_seed44_adaptive.json  summary copy.json  summary.json  tinyimagenet_psi80p0_mu0p1_seed42_adaptive.json
scripts/: make_figures.py  print_table.py  train.py
tests/: test_smoke.py
